--- a/requirements.txt
+++ b/requirements.txt
@@ -15,8 +15,13 @@ decorator==4.4.2
 everett==1.0.2
 flatten-dict==0.3.0
 future==0.18.2
-google-auth==1.16.1
+google-api-core==1.21.0
+google-auth==1.18.0
 google-auth-oauthlib==0.4.1
+google-cloud-core==1.3.0
+google-cloud-storage==1.29.0
+google-resumable-media==0.5.1
+googleapis-common-protos==1.52.0
 grpcio==1.29.0
 idna==2.9
 importlib-metadata==1.6.1
@@ -44,6 +49,7 @@ pydub==0.24.1
 pyparsing==2.4.7
 pyrsistent==0.16.0
 python-dateutil==2.8.1
+pytz==2020.1
 PyYAML==5.3.1
 requests==2.23.0
 requests-oauthlib==1.3.0
